added player missing sprite png