@@ -7,12 +7,14 @@ import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.graphics.g2d.SpriteBatch;
 import com.badlogic.gdx.utils.ScreenUtils;
 import com.badlogic.gdx.utils.Logger;
+import com.badlogic.gdx.math.Rectangle;
 
 public class Main extends ApplicationAdapter {
     private static final Logger logger = new Logger(Main.class.getName(), Logger.DEBUG);
     private SpriteBatch batch;
     private Texture tileset;
     private GameMap gameMap;
+    private Player player;
 
     @Override
     public void create() {
@@ -23,7 +25,8 @@ public class Main extends ApplicationAdapter {
                 logger.error("Failed to load game map");
                 return;
             }
-            tileset = new Texture(Gdx.files.internal(gameMap.levels.getFirst().layers.getFirst().tilesSheetFile));
+            tileset = new Texture(Gdx.files.internal(gameMap.levels.get(0).layers.get(0).tilesSheetFile));
+            player = new Player("player_texture.png", 50, 50, 200); // Adjust the initial position and speed as needed
         } catch (Exception e) {
             logger.error("Error during create", e);
         }
@@ -35,6 +38,9 @@ public class Main extends ApplicationAdapter {
             ScreenUtils.clear(0.15f, 0.15f, 0.2f, 1f);
             batch.begin();
             renderMap();
+            player.update(Gdx.graphics.getDeltaTime());
+            checkCollisions();
+            player.render(batch);
             batch.end();
         } catch (Exception e) {
             logger.error("Error during render", e);
@@ -67,9 +73,20 @@ public class Main extends ApplicationAdapter {
         }
     }
 
+    private void checkCollisions() {
+        for (GameMap.Level.Zone zone : gameMap.levels.get(0).zones) {
+            Rectangle zoneRect = new Rectangle(zone.x, zone.y, zone.width, zone.height);
+            if (player.getBounds().overlaps(zoneRect)) {
+                // Handle collision (e.g., stop player movement, adjust position, etc.)
+                logger.debug("Collision detected with zone: " + zone.type);
+            }
+        }
+    }
+
     @Override
     public void dispose() {
         batch.dispose();
         tileset.dispose();
+        player.dispose();
     }
 }
